<resources>
    <string name="app_name">DayLucky</string>
    <string name="main_bottom_bar_text_vip">VIP</string>
    <string name="main_bottom_bar_text_lucky">运势</string>
    <string name="main_bottom_bar_text_theme">主题</string>
    <string name="main_bottom_bar_text_style">风格</string>
    <string name="theme_style_normal">默认</string>
    <string name="theme_style_other">其他</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="current_week_lucky_text">本周运势</string>
    <string name="current_month_lucky_text">本月运势</string>
    <string name="current_year_lucky_text">本年运势</string>
    <string name="vip_week_lock_text">解锁专业周运 6元</string>
    <string name="vip_month_lock_text">解锁专业月运 12元</string>
    <string name="vip_year_lock_text">解锁专业年运 30元</string>
    <string name="about_us">关于</string>
    <string name="title_bar_text_agreement">用户协议</string>
    <string name="title_bar_text_privacy">隐私政策</string>
    <string name="title_bar_text_contacts_us">联系我们</string>
    <string name="about_us_copyright_text">北京阿克斯科技有限公司</string>
    <string name="toast_copy_success">复制成功</string>
    <string name="privacy_agree">同意</string>
    <string name="privacy_disagree">暂不使用</string>
    <string name="privacy_title">用户隐私保护声明</string>
    <string name="privacy_hint_text">感谢您选择DayLucky。我们非常重视你的个人信息和隐私保护。为了向你提供更好的服务我们需要获得个人信息等相关授权，在你使用我们的产品前，请仔细阅读《用户协议》和《隐私政策》的全部内容。同意并接受全部条款后，开始使用我们的产品和服务。</string>
    <string name="today">今天</string>
    <string name="toast_pay_failure">支付失败</string>
</resources>