<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_38"
    android:layout_marginEnd="@dimen/dp_38"
    android:layout_gravity="center"
    android:background="@drawable/ic_privacy_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <com.zaotao.daylucky.widget.appview.AppFakeBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_39"
        android:text="@string/privacy_title"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_21" />

    <TextView
        android:id="@+id/view_privacy_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_36"
        android:lineSpacingExtra="@dimen/dp_2"
        android:text="@string/privacy_hint_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_15" />

    <com.isuu.base.view.RoundTextView
        android:id="@+id/view_privacy_agree"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_27"
        android:gravity="center"
        android:text="@string/privacy_agree"
        android:textColor="@color/color1C1C1C"
        android:textSize="@dimen/sp_17"
        app:backgroundColor="@android:color/white"
        app:cornerRadius="@dimen/dp_8" />

    <TextView
        android:id="@+id/view_privacy_disagree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_24"
        android:text="@string/privacy_disagree"
        android:textColor="@color/colorD8D8D8"
        android:textSize="@dimen/sp_15" />
</LinearLayout>