<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FBFB"
    android:orientation="vertical"
    tools:context=".view.activity.AboutUsActivity">

    <com.isuu.base.widget.title.AppTitleBarLayout
        android:id="@+id/app_bar_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.isuu.base.view.RoundImageView
        android:layout_width="@dimen/dp_88"
        android:layout_height="@dimen/dp_88"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_42"
        android:src="@mipmap/ic_launcher" />

    <com.zaotao.daylucky.widget.appview.AppFakeBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/app_name"
        android:textColor="#ff333333"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/about_us_item0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableEnd="@drawable/ic_about_us_arrow_end"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:text="@string/title_bar_text_agreement"
            android:textColor="#ff1a1a1a"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_14"
            android:background="@color/colorEEEEEE" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_us_item1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableEnd="@drawable/ic_about_us_arrow_end"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:text="@string/title_bar_text_privacy"
            android:textColor="#ff1a1a1a"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_14"
            android:background="@color/colorEEEEEE" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_us_item2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableEnd="@drawable/ic_about_us_arrow_end"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:text="@string/title_bar_text_contacts_us"
            android:textColor="#ff1a1a1a"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_40">


        <TextView
            android:id="@+id/about_us_company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_30"
            android:textColor="#ff999999"
            android:textSize="12sp"
            tools:text="2019 北京妥妥科技有限公司" />
    </RelativeLayout>
</LinearLayout>